--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name='google-site-verification' content='iZxXV0DmIUaqfEt33ZGe_KDc0GykzV0K4p6EctGkeDM')
   body
     block content
