--- a/src/server/views/login.pug
+++ b/src/server/views/login.pug
@@ -31,7 +31,7 @@ html(lang="en")
        script.
            window.fbAsyncInit = function() {
                FB.init({
-                   appId: '789884858079669',
+                   appId: '727165344366619',
                    cookie: true,
                    xfbml: true,
                    version: 'v3.3'
@@ -50,6 +50,14 @@ html(lang="en")
            }(document, 'script', 'facebook-jssdk'));
            function checkLoginState() {
                FB.getLoginStatus(function (response) {
-
+                   console.log(JSON.stringify(response));
+                   var xhr = new XMLHttpRequest();
+                   xhr.open('POST', 'http://localhost:3000/api/facebookSignIn');
+                   xhr.setRequestHeader('Content-Type', 'application/json');
+                   xhr.onload = function () {
+                       console.log('Signed in as: ' + xhr.responseText);
+                   };
+                   var payload = {facebook_access_token: response.authResponse.accessToken, user_id : response.authResponse.userID};
+                   xhr.send(JSON.stringify(payload));
                });
            }
