--- a/src/server/tools/email_templates/notify_new_license.pug
+++ b/src/server/tools/email_templates/notify_new_license.pug
@@ -14,8 +14,8 @@ h4 Restaurant information :
 h4 Boss information :
     p Name : #{bossInfo.firstname} #{bossInfo.lastname}
     p Email : #{bossInfo.email}
-- var approveUrl = "https://localhost:3000/api/license/approve?id=" + licenseInfo.id + "&secret=" + licenseInfo.secret_approve
-- var denyUrl = "https://localhost:3000/api/license/deny?id=" + licenseInfo.id + "&secret=" + licenseInfo.secret_deny
+- var approveUrl = "https://foodbodi.appspot.com/api/license/approve?id=" + licenseInfo.id + "&secret=" + licenseInfo.secret_approve
+- var denyUrl = "https://foodbodi.appspot.com/api/license/deny?id=" + licenseInfo.id + "&secret=" + licenseInfo.secret_deny
 
 p
     i To approve/deny this claim, click on 1 of below links
