--- a/src/server/views/license_approved_info.pug
+++ b/src/server/views/license_approved_info.pug
@@ -1,5 +1,4 @@
-html
-    head
-        title License Approved
-    body
-        p A license is approved
+extends layout
+
+block content
+    p Approve successful
