--- a/src/server/views/license_denied_info.pug
+++ b/src/server/views/license_denied_info.pug
@@ -1,5 +1,4 @@
-html
-    head
-        title License Denied
-    body
-        p A license is denied
+extends layout
+
+block content
+    p Deny successful
