--- a/src/server/tools/email_templates/notify_new_license.pug
+++ b/src/server/tools/email_templates/notify_new_license.pug
@@ -1,15 +1,10 @@
-h4 License information :
-p Business name : #{licenseInfo.business_name}
-p Registration number : #{licenseInfo.registration_number}
-p Principle place : #{licenseInfo.principle_place}
-p Proprietors : #{licenseInfo.proprietors.toString()}
-p License photo : #{licenseInfo.license_photo}
-
 h4 Restaurant information :
 p Restaurant name : #{restaurantInfo.name}
 p Address : #{restaurantInfo.address}
 p Category : #{restaurantInfo.category}
 p Type : #{restaurantInfo.type}
+p Registration number : #{licenseInfo.registration_number}
+p Proprietors : #{licenseInfo.representative_name.toString()}
 
 h4 Boss information :
 p Name : #{bossInfo.firstname} #{bossInfo.lastname}
