--- a/src/server/views/admin_app.html
+++ b/src/server/views/admin_app.html
@@ -3,6 +3,7 @@
     <title> Foodbodi database </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDblkDUFb2PtNU_hg4YSp4ceBprpM8HG0A&libraries=places"></script>
 
 </head>
