update privacy policy

--- a/src/server/views/privacy.html
+++ b/src/server/views/privacy.html
@@ -26,9 +26,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
-    <div class="container">
-        <h2>Privacy Policy</h2>
+<body style="padding: 3em;">
+    <div class="container" style="margin-top: 30px">
+        <h2>Foodbodi Privacy Policy</h2>
         <br>
         <p>
             Foodbodi built the Foodbodi app as
@@ -56,10 +56,18 @@
         </p> <p><strong>Information Collection and Use</strong></p> <p>
             For a better experience, while using our Service,
             we may require you to provide us with certain
-            personally identifiable information, including but not limited to email, name, height, weight, step count. The
-            information that we request will be
-            retained by us and used as described in this privacy policy.
-        </p> <p>
+            personally identifiable information including :
+        </p>
+        <ul>
+            <li><strong>Email</strong> : We use your email to create an unique account for clients and use it to track activities while clients are using internal Foodbodi's features.
+                Our tracking is to optimize user experience only.
+                We get client's emails via normal registering process or via "Login With Google" method
+            </li>
+            <li><strong>Facebook id</strong> : We can get client's facebook ids when clients use "Login With Facebook" button to create an account. Facebook ids is to create an unique account only and the usage is the same as Email</li>
+            <li><strong>Step count</strong>: Foodbodi extracts step count data from GoogleFit( for Android) and HealthKit( for iOS) to estimate client burned calories amount so that Foodbodi can give better suggestion to clients  </li>
+            <li><strong>Location</strong>:  Foodbodi use client's locations to give suggestions and your location data is NOT stored anywhere.</li>
+        </ul>
+        <p>
             The app does use third party services that may collect
             information used to identify you.
         </p> <div><p>
