--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -44,6 +44,7 @@
 						<li class="menu-active"><a href="/">Home</a></li>
 						<li><a href="about">About</a></li>
 						<li><a href="contact">Contact</a></li>
+						<li><a href="/privacy_policy">Privacy</a></li>
 					</ul>
 				</nav>
 			</div>
